<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <ImageView
        android:id="@+id/img_poster"
        android:contentDescription="@string/poster_depan"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_poster"
        android:text="@string/name_movie"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_poster"
        android:layout_marginStart="26dp"
        android:layout_below="@id/txt_title">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/gambar_tomato_meter"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ranting"
            android:ellipsize="end"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txt_tomato_meter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:textSize="12sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/_80"/>

        <TextView
            android:id="@+id/txt_genres"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:fontFamily="serif"
            android:maxLines="1"
            android:text="@string/action_adventure_Thiller"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>



    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_poster"
        android:layout_marginStart="26dp"
        android:layout_below="@id/linearlayout"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem"
        android:textSize="14sp"

        />

</RelativeLayout>