<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_poster"
                android:contentDescription="@string/poster_detail"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="26dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/title"
                    android:fontFamily="serif"
                    android:textColor="@color/colorRed"
                    android:textSize="20sp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/audience_score"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_audience_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/score_audience"
                    android:fontFamily="serif"
                    android:textColor="@color/colorRed"
                    android:textSize="20sp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/ranting_film"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_tomato_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ranting"
                    android:fontFamily="serif"
                    android:textColor="@color/colorRed"
                    android:textSize="20sp"  />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/square__1_"
                android:text="@string/action_adventure_Thiller"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:contentDescription="@string/gambar_jam"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_timer_grey_24dp"
                    android:ellipsize="end"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:maxLines="3"/>
                <ImageView
                    android:contentDescription="@string/gambar_release_date"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_language_grey_24dp"
                    android:ellipsize="end"
                    android:paddingTop="15dp"
                    android:textAlignment="center"
                    android:maxLines="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/runtime"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorRed"/>

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/in_theaters"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorRed"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_runtime"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_2h_10m"
                    android:fontFamily="serif"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_date_release"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/theaters"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:drawableStart="@drawable/square__1_"
                        android:text="@string/overview"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>


                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:text="@string/lorem_ipsum_dolor_sit_amet"
                    android:fontFamily="serif"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/directed_by"
                        android:drawableStart="@drawable/square__1_"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_directed_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:padding="14dp"
                    android:textAlignment="textStart"
                    android:text="@string/lorem_ipsum_dolor_sit_amet"
                    android:fontFamily="serif"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>